Updated data to be read from json rather than csv

--- a/pages/audience_participation.html
+++ b/pages/audience_participation.html
@@ -9,20 +9,20 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exercises and Formats</a></h5>
 	</div>
 </header>
 <body>
 	<h1 class="text-center my-3">Audience Participation</h1>
 	<p class="text-center my-3">These games involve bringing memebers of the audience on stage to participate in an active way.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#pillars">Pillars</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<h5><a href="#pillars">Pillars</a></h5>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
@@ -43,8 +43,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exercises and Formats</a></h5>
 	</div>
 </footer>
 </html>
