--- a/pages/categories.html
+++ b/pages/categories.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="../styles/style.css">
 </head>
 <header>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+  <div class="d-flex flex-wrap justify-content-around">
+    <h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+    <h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+  </div>
 </header>
 <body>
   <h1 class="text-center my-3">Categories</h1>
@@ -45,8 +48,8 @@
   </div>
   <footer>
     <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
+      <h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+      <h5 class="mx-5 py-2"><a href="../pages/categories.html">Games Exerciese and Formats</a>
     </div>
   </footer>
 </body>
