--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -9,59 +9,59 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exercises and Formats</a></h5>
 	</div>
 </header>
 <body>
 	<h1 class="text-center my-3">Exercises</h1>
 	<p class="text-center my-3">These exercises are meant to develop various improvisational skills.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#60SecondsOfSilence">60 Seconds of Silence</a></h5>
-				</li>
-				<li>
-					<h5><a href="#aRealReason">A Real Reason</a></h5>
-				</li>
-				<li>
-					<h5><a href="#adGame">Ad Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#alienTigerCow">Alien Tiger Cow</a></h5>
-				</li>
-				<li>
-					<h5><a href="#alphabetGame">Alphabet Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#badRap">Bad Rap</a></h5>
-				</li>
-				<li>
-					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bigBooty">Big Booty</a></h5>
-				</li>
-				<li>
-					<h5><a href="#chameleon">Chameleon</a></h5>
-				</li>
-				<li>
-					<h5><a href="#characterPanel">Character Panel</a></h5>
-				</li>
-				<li>
-					<h5><a href="#characterMatching">Character Matching</a></h5>
-				</li>
-				<li>
-					<h5><a href="#dontTalkAboutTheThing">Don't Talk about the Thing</a></h5>
-				</li>
-				<li>
-					<h5><a href="#mindMeld">Mind Meld</a></h5>
-				</li>
-				<li>
-					<h5><a href="#typewriter">Typewriter</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<h5><a href="#60SecondsOfSilence">60 Seconds of Silence</a></h5>
+			</li>
+			<li>
+				<h5><a href="#aRealReason">A Real Reason</a></h5>
+			</li>
+			<li>
+				<h5><a href="#adGame">Ad Game</a></h5>
+			</li>
+			<li>
+				<h5><a href="#alienTigerCow">Alien Tiger Cow</a></h5>
+			</li>
+			<li>
+				<h5><a href="#alphabetGame">Alphabet Game</a></h5>
+			</li>
+			<li>
+				<h5><a href="#badRap">Bad Rap</a></h5>
+			</li>
+			<li>
+				<h5><a href="#beastieBoys">Beastie Boys</a></h5>
+			</li>
+			<li>
+				<h5><a href="#bigBooty">Big Booty</a></h5>
+			</li>
+			<li>
+				<h5><a href="#chameleon">Chameleon</a></h5>
+			</li>
+			<li>
+				<h5><a href="#characterPanel">Character Panel</a></h5>
+			</li>
+			<li>
+				<h5><a href="#characterMatching">Character Matching</a></h5>
+			</li>
+			<li>
+				<h5><a href="#dontTalkAboutTheThing">Don't Talk about the Thing</a></h5>
+			</li>
+			<li>
+				<h5><a href="#mindMeld">Mind Meld</a></h5>
+			</li>
+			<li>
+				<h5><a href="#typewriter">Typewriter</a></h5>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
@@ -70,7 +70,7 @@
 	<div class="game-box p-2" id="60SecondsOfSilence">
 		<h3>60 Seconds of Silence</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Two players take the stage.<br>A suggestion is given.<br>They strike a pose then hold it and wait.<br>After 60 seconds the teachers calls start and the scene begins.</li></ul><hr><p><strong>Purpose:</strong><br><ul><li>In the beginning you'll be thinking of many different ideas and dropping them, thinking about the other person, and shifting your posture slightly.</li><li>As you near the 60 second mark that panic will settle and you'll have nothing but a general idea of the dynamic between you and you're partner.</li><li>By the time the scene starts you should be ready to listen intently to your scene partner.</li></ul><hr><p><strong>Source:</strong><ul><li>How to be the Greatest Improviser on Earth by Will Hines - p. 22</li></ul><hr>		<h6>Tags</h6>
+<p><strong>Description:</strong><ul><li>Two players take the stage.<br>A suggestion is given.<br>They strike a pose then hold it and wait.<br>After 60 seconds the teacher calls start and the scene begins.</li></ul><hr><p><strong>Purpose:</strong><ul><li>In the beginning you'll be thinking of many different ideas and dropping them, thinking about the other person, and shifting your posture slightly.</li><li>As you near the 60 second mark that panic will settle and you'll have nothing but a general idea of the dynamic between you and your partner.</li><li>By the time the scene starts you should be ready to listen intently to your scene partner.</li></ul><hr><p><strong>Source:</strong><ul><li>How to be the Greatest Improviser on Earth by Will Hines - p. 22</li></ul><hr>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -82,7 +82,7 @@
 	<div class="game-box p-2" id="aRealReason">
 		<h3>A Real Reason</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Two players take the stage.</li><li>Player 1 makes an accusation against player 2</li><li>Player 2 must then give a real, logical reason why they would have done that thing.</li><li>Player 2 must accept without argument that they did the thing of which they are accused.</li><li>This exercise is part of a series try <a href='exercises.html#supervillain'>Supervillain / Mastermind</a> then <a href='exercises.html#ownIt'>Own It</a> before this exercise.</li></ul><hr><p><strong>Example:</strong><br><ul><li>Player 1: Sir... We found these knives and excessive liquids in your luggage. Were you planning on taking these onto the plane?</li><li>Player 2 as supervillain: Yes! So I can take over the skies!</li><li>Player 2 owning it: Yes I plan on bullying passengers up there!</li><li>Player 2 giving a real reason: You know, I was just hoping you wouldn't check. I thought I could get away with it. I think TSA policies are kinda dumb. I'm not planning anything bad, I just don't want to follow your rules.</li></ul><p>The real reason response is rich, specific and truthful. It's the best way to respond to strange endowments.</p><hr><p><strong>Source:</strong><ul><li>How to be the Greatest Improviser on Earth by Will Hines - p. 58</li></ul><hr>		<h6>Tags</h6>
+<p><strong>Description:</strong><ul><li>Two players take the stage.</li><li>Player 1 makes an accusation against player 2.</li><li>Player 2 must then give a real, logical reason why they would have done that thing.</li><li>Player 2 must accept without argument that they did the thing of which they are accused.</li><li>This exercise is part of a series try <a href='exercises.html#supervillain'>Supervillain / Mastermind</a> then <a href='exercises.html#ownIt'>Own It</a> before this exercise.</li></ul><hr><p><strong>Example:</strong><ul><li>Player 1: Sir... We found these knives and excessive liquids in your luggage. Were you planning on taking these onto the plane?</li><li>Player 2 as supervillain: Yes! So I can take over the skies!</li><li>Player 2 owning it: Yes I plan on bullying passengers up there!</li><li>Player 2 giving a real reason: You know, I was just hoping you wouldn't check. I thought I could get away with it. I think TSA policies are kinda dumb. I'm not planning anything bad, I just don't want to follow your rules.</li></ul><p>The real reason response is rich, specific and truthful. It's the best way to respond to strange endowments.</p><hr><p><strong>Source:</strong><ul><li>How to be the Greatest Improviser on Earth by Will Hines - p. 58</li></ul><hr>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -155,7 +155,7 @@ description		<h6>Tags</h6>
 		<h3>Big Booty</h3>
 		<hr>
 description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Part</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -166,8 +166,8 @@ description		<h6>Tags</h6>
 	<div class="game-box p-2" id="chameleon">
 		<h3>Chameleon</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Several improvisers from a back line.</li><li>One player steps forward, they will be the chameleon.</li><li>One at a time players step off the back line to initiate a short scene with the chameleon.</li><li>They should enter with a strong character choice.</li><li>The chamelon has to match their character choice and the two do a peas in a pod scene.</li><li>After a few shorts scenes, a new player from the back line become the chameleon.</li></ul><hr><p><strong>Tips:</strong><ul><li>Don't start a scene with an initiation that makes it difficult for the chameleon to match your character.</li></ul><hr><p><strong>Source:</strong><br><ul><li>The Upright Citizens Brigade Comedy Improv Manual(second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 178</li></ul><hr>		<h6>Tags</h6>
-		<a href="character.html">Character</a> - <a href="excercises.html">Exercise</a> - <a href="scene.html">Scene</a> - 
+<p><strong>Description:</strong><br><ul><li>Several improvisers from a back line.</li><li>One player steps forward, they will be the chameleon.</li><li>One at a time players step off the back line to initiate a short scene with the chameleon.</li><li>They should enter with a strong character choice.</li><li>The chameleon has to match their character choice and the two do a peas in a pod scene.</li><li>After a few short scenes, a new player from the back line becomes the chameleon.</li></ul><hr><p><strong>Tips:</strong><ul><li>Don't start a scene with an initiation that makes it difficult for the chameleon to match your character.</li></ul><hr><p><strong>Source:</strong><br><ul><li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 178</li></ul><hr>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="scene.html">Scene</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -178,7 +178,7 @@ description		<h6>Tags</h6>
 	<div class="game-box p-2" id="characterPanel">
 		<h3>Character Panel</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialogue will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -238,8 +238,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exercises and Formats</a></h5>
 	</div>
 </footer>
 </html>
