--- a/pages/character.html
+++ b/pages/character.html
@@ -3,35 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Character</title>
+	<title>Characters</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exercises and Formats</a></h5>
 	</div>
 </header>
 <body>
-	<h1 class="text-center my-3">Character</h1>
+	<h1 class="text-center my-3">Characters</h1>
 	<p class="text-center my-3">These games and exercises involve the exploration and/or discovery characters.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#chameleon">Chameleon</a></h5>
-				</li>
-				<li>
-					<h5><a href="#characterPanel">Character Panel</a></h5>
-				</li>
-				<li>
-					<h5><a href="#characterMatching">Character Matching</a></h5>
-				</li>
-				<li>
-					<h5><a href="#taxi">Taxi</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<h5><a href="#chameleon">Chameleon</a></h5>
+			</li>
+			<li>
+				<h5><a href="#characterPanel">Character Panel</a></h5>
+			</li>
+			<li>
+				<h5><a href="#characterMatching">Character Matching</a></h5>
+			</li>
+			<li>
+				<h5><a href="#taxi">Taxi</a></h5>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
@@ -40,8 +40,8 @@
 	<div class="game-box p-2" id="chameleon">
 		<h3>Chameleon</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Several improvisers from a back line.</li><li>One player steps forward, they will be the chameleon.</li><li>One at a time players step off the back line to initiate a short scene with the chameleon.</li><li>They should enter with a strong character choice.</li><li>The chamelon has to match their character choice and the two do a peas in a pod scene.</li><li>After a few shorts scenes, a new player from the back line become the chameleon.</li></ul><hr><p><strong>Tips:</strong><ul><li>Don't start a scene with an initiation that makes it difficult for the chameleon to match your character.</li></ul><hr><p><strong>Source:</strong><br><ul><li>The Upright Citizens Brigade Comedy Improv Manual(second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 178</li></ul><hr>		<h6>Tags</h6>
-		<a href="character.html">Character</a> - <a href="excercises.html">Exercise</a> - <a href="scene.html">Scene</a> - 
+<p><strong>Description:</strong><br><ul><li>Several improvisers from a back line.</li><li>One player steps forward, they will be the chameleon.</li><li>One at a time players step off the back line to initiate a short scene with the chameleon.</li><li>They should enter with a strong character choice.</li><li>The chameleon has to match their character choice and the two do a peas in a pod scene.</li><li>After a few short scenes, a new player from the back line becomes the chameleon.</li></ul><hr><p><strong>Tips:</strong><ul><li>Don't start a scene with an initiation that makes it difficult for the chameleon to match your character.</li></ul><hr><p><strong>Source:</strong><br><ul><li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 178</li></ul><hr>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="scene.html">Scene</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -52,7 +52,7 @@
 	<div class="game-box p-2" id="characterPanel">
 		<h3>Character Panel</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialogue will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -88,8 +88,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exercises and Formats</a></h5>
 	</div>
 </footer>
 </html>
